fix: change z-index

--- a/css/app.css
+++ b/css/app.css
@@ -93,7 +93,7 @@ footer a:link, a:visited, a:hover, a:active {
   .control {
     display: none;
     width: 100%;
-    z-index: 2;
+  z-index: 1000;
     position: absolute;
     height: 100%;
     left: 0;
